Style heading and fix sidebar z-index

--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -77,12 +77,14 @@ h4 {
 */
 
 #sidebar, #sidebar-widescreen {
-    background-color: rgba(89, 51, 37, 0.9);
+    z-index: 1000;
+    background-color: #593325;
     color: #D9AE89;
+    box-shadow: 3px 0 5px rgba(38, 26, 22, 0.3);
 }
 
 #sidebar {
-    float: left;
+    /*float: left;*/
     position: fixed;
     top: 4.5rem;
     left: 0;
@@ -100,6 +102,7 @@ h4 {
     overflow: hidden;
 }
 
+/*
 #sidebar.collapsing {
     -webkit-transition-property: height, visibility;
     transition-property: height, visibility;
@@ -108,6 +111,7 @@ h4 {
     -webkit-transition-timing-function: ease;
     transition-timing-function: ease;
 }
+*/
 
 #sidebar.collapsing.width {
     -webkit-transition-property: width, visibility;
@@ -139,6 +143,7 @@ h4 {
     background-color: rgba(38, 26, 22, 0.9);
     color: #D9AE89;
     height: 4.5rem;
+    box-shadow: 0 3px 5px rgba(38, 26, 22, 0.3);
 }
 
 #title {
@@ -187,12 +192,20 @@ i {
     max-width: 100%;
     height: auto;
     width: auto;
-    shape-outside: polygon(55% 0%, 37% 25%, 40% 42%, 15% 47%, 5% 55%, 0% 65%, 5% 100%, 100% 100%, 100% 0%);
+    shape-outside: polygon(70% 0%, 38% 25%, 40% 42%, 15% 47%, 5% 55%, 0% 65%, 5% 100%, 100% 100%, 100% 0%);
 }
 
-#intro span {
+code {
+    background-color: #68764A;
+    color: #D9AE89;
+    box-shadow: 0 3px 5px rgba(104, 118, 74, 0.3);
+}
+
+#loves {
     color: #D95A2B;
     font-family: 'Pacifico', cursive;
+    font-size: calc(1.6rem + 2.1vw);
+    line-height: calc(1.2*(1.425rem + 2.1vw));
 
 }
 
